--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     rev: v1.3.0
     hooks:
       - id: mypy
+        additional_dependencies: [types-all]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0-alpha.9-for-vscode # Use the sha / tag you want to point at
@@ -27,6 +28,10 @@ repos:
     rev: v3.0.0a6
     hooks:
       - id: pylint
+        additional_dependencies:
+          - mendeleev
+          - sqlalchemy
+          - scipy
 
   - repo: https://github.com/PyCQA/doc8
     rev: v1.1.1
@@ -45,3 +50,4 @@ repos:
 
 default_language_version:
   python: python3.10
+
