--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,25 +2,25 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-added-large-files
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.3.0
+    rev: v1.5.0
     hooks:
       - id: mypy
         additional_dependencies: [types-all]
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode # Use the sha / tag you want to point at
+    rev: v3.0.1 # Use the sha / tag you want to point at
     hooks:
       - id: prettier
 
   - repo: https://github.com/psf/black
-    rev: 23.3.0
+    rev: 23.7.0
     hooks:
       - id: black
 
@@ -32,6 +32,7 @@ repos:
           - mendeleev
           - sqlalchemy
           - scipy
+          - numba
 
   - repo: https://github.com/PyCQA/doc8
     rev: v1.1.1
@@ -39,7 +40,7 @@ repos:
       - id: doc8
 
   - repo: https://github.com/PyCQA/autoflake
-    rev: v2.1.1
+    rev: v2.2.0
     hooks:
       - id: autoflake
 
@@ -50,4 +51,3 @@ repos:
 
 default_language_version:
   python: python3.10
-
