--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,10 @@ install_requires =
     numpy
     matplotlib
     scipy
-    
+    mendeleev
+    numba
+    cython
+
 [options.extras_require]
 dev =
     pytest
